--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 <body>
-    <h1>Chat App</h1>
+    <Center><h1>Hey you can Text here</h1>
+    <p>Developed By Sailendra</p></Center>
     <ul id="messages"></ul>
-    <input id="messageInput" placeholder="Type your message..." />
-    <button onclick="sendMessage()">Send</button>
+    <center> <input id="messageInput" placeholder="Type your message..." />
+    <button onclick="sendMessage()">Send</button></center>
     
     <script>
         const socket =io(window.location.origin);
